--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,32 +11,63 @@
     <!--поле ввода первого числа-->
     <input id="num1" />
 
-    <!--болки с кнопками-->
+    <!--блоки с кнопками-->
 <div id="operator_btns">
     <button id="plus" onclick="sel_light('plus')">+</button>
     <button id="minus" onclick="sel_light('minus')">-</button>
-    <button id="times" onclick="sel_light('times')">x</button>
+    <button id="times" onclick="sel_light('times')">*</button>
     <button id="divide" onclick="sel_light('divide')">:</button>
  </div>
  <!--поле ввода второго числа-->
  <input id="num2" />
  <br>
  <!--кнопка для рассчётов-->
- <button onclick="func()">Посчитать</button>
+ <button onclick="func()"> Посчитать </button>
   <p id="result"></p>
 
   <script>
-      // переменная, в которой хранится выбранное матиматическое действие
+      // переменная, в которой хранится выбранное матеатическое действие
       var op;
         //функция расчёта
       function func() {
           // переменная для результата
           var result;
-          //получаем первое и второе число
-          var num1 = Number(document.getElementById("num1").value);
-          var num2 = Number(document.getElementById("num2").value);
-         // смотрим, что было в переменной с действием, и действуем исходя из этого
-          switch (op) {
+        //получаем первое и второе число
+          var num1_str = String(document.getElementById("num1").value);
+          var num2_str = String(document.getElementById("num2").value);
+
+          // Переводим строки в числа
+          let num1 = Number(num1_str);
+          let num2 = Number(num2_str);
+
+          // проверяем второе число при делении
+          if ((num2 == 0) && (op == '/')) {
+              //если не получилось - пишем сообщение
+              document.getElementById("result").innerHTML = 'На ноль делить нельзя';
+             return;
+          }
+
+
+          // проверяем, получилось ли число из первой строки или нет
+          if ((isNaN)(num1)) {
+              document.getElementById("result").innerHTML = "В первом поле - Не Число! Так нельзя";
+              return;
+          }
+
+          // проверяем, получилось ли число из второй строки или нет
+          if (isNaN(num2)) {
+              document.getElementById("result").innerHTML = 'Калькулятор не может распознать число.Проверьте.';
+              return;
+          }
+
+          // проверяем размер числа
+          if ((num1 > 99999999) || (num2 > 99999999)) {
+              document.getElementById("result").innerHTML = 'Калькулятор может работать с числами не больше 99 999 999';
+              return;
+          }
+
+           // смотрим, что было в переменной с действием и действуем исходя из этого
+           switch (op) {
               case '+':
                  result = num1 + num2;
                  break;
@@ -49,11 +80,13 @@
               case '/':
                  result = num1 / num2;
                  break;  
+                default:
+                 result = 'Выберите дествие'
           }
           document.getElementById("result").innerHTML = result;
       }
 
-      // функция, которая подсвечивает выбраное матиматическое действие
+      // функция, которая подсвечивает выбранное математическое действие
     function sel_light(sel_id) {
         //убираем класс подсветки со всех кнопак
         document.getElementById("plus").classList.remove("light");
@@ -80,7 +113,7 @@
                 break;    
         }
     }
-    //добавляем обработчик нажатия на клавищи ко второму полю ввода
+    //добавляем обработчик нажатия на клавиши ко второму полю ввода
     document.getElementById("num2").addEventListener('keydown', function(e) {
         if (e.keyCode === 13) {
             func();
